# Noise_generator

./: .gitignore  CLAUDE.md  LICENSE  README.md  generate_custom_noise.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
custom_noise/: __init__.py  __main__.py  noise_generator.py
tests/: conftest.py  test_noise_generator.py
